z-index fix

--- a/Fitogether/css/style.css
+++ b/Fitogether/css/style.css
@@ -6,7 +6,7 @@
 */
 .modal-backdrop{
 
-  z-index:0;
+  z-index:1000;
   
   }
 /*--------------------------------------------------------------
